--- a/materials.html
+++ b/materials.html
@@ -10,9 +10,8 @@
     <meta name="author" content="Daniel Stauffer">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <title>FAB FOREVER | Your 3D printing roundup resource!</title>
-    <link rel="icon" type="image/x-icon" href="https://rebellionwebdesign.github.io/assets/img/favicon.svg">
+    <link rel="icon" type="image/x-icon" href="https://rebellionwebdesign.github.io/assets/img/svg/favicon.svg">
     <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
-</head>
 
 <body>
     <!--RESPONSIVE HEADER START-->
@@ -21,34 +20,34 @@
             <div class="column-2 full-row flex flex-between flex-center--y">
                 <a href="https://rebellionwebdesign.github.io/fab-forever"
                     aria-label="the logo sends you back to the homepage">
-                    <img class="headerbar__logo headerbar__logo--mobile" src="assets/img/fab-forever-logo.svg"
+                    <img class="headerbar__logo headerbar__logo--mobile" src="assets/img/svg/fab-forever-logo.svg"
                         alt="the fab forever logo">
                 </a>
-                <img class="mobile--open" src="assets/img/bars-solid.svg" alt="this should be an open icon">
+                <img class="mobile--open" src="assets/img/svg/bars-solid.svg" alt="this should be an open icon">
             </div>
             <div class="column-2 column-2__nav--mobile closed flex flex-end">
-                <img class="mobile--close" src="assets/img/xmark-solid.svg" alt="this should be a close icon">
+                <img class="mobile--close" src="assets/img/svg/xmark-solid.svg" alt="this should be a close icon">
                 <nav>
                     <ul>
                         <li>
-                            <a href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener"
-                            target="_self" aria-label="this link sends you to the home page">HOME</a>
+                            <a href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener" target="_self"
+                                aria-label="this link sends you to the home page">HOME</a>
                         </li>
                         <li>
                             <a href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener"
-                            target="_self" aria-label="this link sends you to the basics page">BASICS</a>
+                                target="_self" aria-label="this link sends you to the basics page">BASICS</a>
                         </li>
                         <li>
                             <a href="https://rebellionwebdesign.github.io/fab-forever/materials.html" rel="noopener"
-                            target="_self" aria-label="this link sends you to the materials page">MATERIALS</a>
+                                target="_self" aria-label="this link sends you to the materials page">MATERIALS</a>
                         </li>
                         <li>
                             <a href="https://rebellionwebdesign.github.io/fab-forever/models.html" rel="noopener"
-                            target="_self" aria-label="this link sends you to the models page">MODELS</a>
+                                target="_self" aria-label="this link sends you to the models page">MODELS</a>
                         </li>
                         <li>
                             <a href="https://rebellionwebdesign.github.io/fab-forever/help.html" rel="noopener"
-                            target="_self" aria-label="this link sends you to the help page">HELP</a>
+                                target="_self" aria-label="this link sends you to the help page">HELP</a>
                         </li>
                     </ul>
                 </nav>
@@ -59,23 +58,28 @@
 
     <!--HEADER SECTION START-->
     <section class="section-half flex flex-center flex-column flex-between background">
-        <img class="divider" src="assets/img/shape-divider-top.svg" alt="the top shape divider">
+        <img class="divider" src="assets/img/svg/shape-divider-top.svg" alt="the top shape divider">
         <div class="container container-mobile text-white text-shadow flex flex-center">
             <h1><span>MATERIALS</span> for 3D Printing</h1>
         </div>
-        <img class="flip-x divider-bottom divider" src="assets/img/shape-divider-bottom.svg" alt="the top shape divider">
+        <img class="flip-x divider-bottom divider" src="assets/img/svg/shape-divider-bottom.svg"
+            alt="the top shape divider">
     </section>
 
     <!--CONTENT SECTION START-->
     <main>
         <section class="section-full flex flex-center section-padding--bottom">
             <div class="container flex flex-column flex-column--mobile">
-            <h2><span>Follow</span> the white filament</h2>
+                <h2><span>Follow</span> the white filament</h2>
                 <picture class="flex flex-center">
-                    <source media="(max-width: 375px)" srcset="assets/img/content-images/img/fab-forever-filament-measure-mobile.jpg">
-                    <source media="(max-width: 576px)" srcset="assets/img/content-images/img/fab-forever-filament-measure-mobile.jpg">
-                    <source media="(max-width: 768px)" srcset="assets/img/content-images/img/fab-forever-filament-measure-mobile.jpg">
-                    <img class="printhead rounded margin-top--l" src="assets/img/content-images/img/fab-forever-filament-measure.jpg"
+                    <source media="(max-width: 375px)"
+                        srcset="assets/img/content-images/fab-forever-filament-measure-mobile.jpg">
+                    <source media="(max-width: 576px)"
+                        srcset="assets/img/content-images/fab-forever-filament-measure-mobile.jpg">
+                    <source media="(max-width: 768px)"
+                        srcset="assets/img/content-images/fab-forever-filament-measure-mobile.jpg">
+                    <img class="printhead rounded margin-top--l"
+                        src="assets/img/content-images/fab-forever-filament-measure.jpg"
                         alt="this should be a filament image">
                 </picture>
                 <article class="margin-top--l margin-bottom--l">
@@ -94,17 +98,21 @@
                         temperatures of 45 degrees - otherwise they will get soft and deform quickly.<br><br> This is
                         where ABS comes into the picture. ABS is a industrial grade 3d printing material. Industrial
                         grade means it is widely adopted as a material used in industrial applications such as injection
-                        molding. An ABS printed object can withstand temperatures of up to 110 degrees celsius, but
+                        molding. An ABS printed object can withstand temperatures of up to 110 degrees celsius, but/svg
                         needs to be printed at about 250 degrees. On top of that ABS comes with a distinctive smell
                         which is definetly not for everyone.<br><br>PETG is like inbetween PLA and ABS, it doesnt smell
                         like ABS, but needs to printed at almost the same temperatures. On the other hand it prints very
                         easily and still withstands temperatures of 100 degrees celsius.</p>
                 </article>
                 <picture class="flex flex-center">
-                    <source media="(max-width: 375px)" srcset="assets/img/content-images/img/fab-forever-filament-roll-mobile.jpg">
-                    <source media="(max-width: 576px)" srcset="assets/img/content-images/img/fab-forever-filament-roll-mobile.jpg">
-                    <source media="(max-width: 768px)" srcset="assets/img/content-images/img/fab-forever-filament-roll-mobile.jpg">
-                    <img class="printhead rounded margin-top--l" src="assets/img/content-images/img/fab-forever-filament-roll.jpg"
+                    <source media="(max-width: 375px)"
+                        srcset="assets/img/content-images/fab-forever-filament-roll-mobile.jpg">
+                    <source media="(max-width: 576px)"
+                        srcset="assets/img/content-images/fab-forever-filament-roll-mobile.jpg">
+                    <source media="(max-width: 768px)"
+                        srcset="assets/img/content-images/fab-forever-filament-roll-mobile.jpg">
+                    <img class="printhead rounded margin-top--l"
+                        src="assets/img/content-images/fab-forever-filament-roll.jpg"
                         alt="this should be a filament roll">
                 </picture>
                 <article class="margin-top--l margin-bottom--l">
@@ -138,22 +146,22 @@
                 <div class="social">
                     <a href="https://www.instagram.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to instagram"><img class="social-icon"
-                            src="assets/img/instagram.svg" alt="the instagram logo"></a>
+                            src="assets/img/svg/instagram.svg" alt="the instagram logo"></a>
                     <a href="https://www.facebook.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to facebook"><img class="social-icon"
-                            src="assets/img/square-facebook.svg" alt="the facebook logo"></a>
+                            src="assets/img/svg/square-facebook.svg" alt="the facebook logo"></a>
                     <a href="https://www.twitter.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to twitter"><img class="social-icon"
-                            src="assets/img/square-twitter.svg" alt="the twitter logo"></a>
+                            src="assets/img/svg/square-twitter.svg" alt="the twitter logo"></a>
                     <a href="https://www.slack.com" rel="noopener" target="_blank"
-                        aria-label="this link sends you to slack"><img class="social-icon" src="assets/img/slack.svg"
-                            alt="the slack logo"></a>
+                        aria-label="this link sends you to slack"><img class="social-icon"
+                            src="assets/img/svg/slack.svg" alt="the slack logo"></a>
                 </div>
             </div>
         </div>
     </footer>
     <!--FOOTER END-->
-    
+
     <script src="assets/js/mobile-menu.js"></script>
 </body>
 
