Fix image paths

--- a/models.html
+++ b/models.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Daniel Stauffer">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <title>FAB FOREVER | Your 3D printing roundup resource!</title>
-    <link rel="icon" type="image/x-icon" href="https://rebellionwebdesign.github.io/assets/img/favicon.svg">
+    <link rel="icon" type="image/x-icon" href="https://rebellionwebdesign.github.io/assets/img/svg/favicon.svg">
     <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 </head>
 
@@ -21,13 +21,13 @@
             <div class="column-2 full-row flex flex-between flex-center--y">
                 <a href="https://rebellionwebdesign.github.io/fab-forever"
                     aria-label="the logo sends you back to the homepage">
-                    <img class="headerbar__logo headerbar__logo--mobile" src="assets/img/fab-forever-logo.svg"
+                    <img class="headerbar__logo headerbar__logo--mobile" src="assets/img/svg/fab-forever-logo.svg"
                         alt="the fab forever logo">
                 </a>
-                <img class="mobile--open" src="assets/img/bars-solid.svg" alt="this should be an open icon">
+                <img class="mobile--open" src="assets/img/svg/bars-solid.svg" alt="this should be an open icon">
             </div>
             <div class="column-2 column-2__nav--mobile closed flex flex-end">
-                <img class="mobile--close" src="assets/img/xmark-solid.svg" alt="this should be a close icon">
+                <img class="mobile--close" src="assets/img/svg/xmark-solid.svg" alt="this should be a close icon">
                 <nav>
                     <ul>
                         <li>
@@ -72,10 +72,10 @@
     <div class="container container--mobile">
         <h2><span>You</span> can model too!</h2>
             <picture class="flex flex-center">
-                <source media="(max-width: 375px)" srcset="assets/img/content-images/img/fab-forever-octocat-mobile.jpg">
-                <source media="(max-width: 576px)" srcset="assets/img/content-images/img/fab-forever-octocat-mobile.jpg">
-                <source media="(max-width: 768px)" srcset="assets/img/content-images/img/fab-forever-octocat-mobile.jpg">
-                <img class="printhead rounded margin-top--l" src="assets/img/content-images/img/fab-forever-octocat.jpg" alt="this should be a printd 3d model">
+                <source media="(max-width: 375px)" srcset="assets/img/content-images/fab-forever-octocat-mobile.jpg">
+                <source media="(max-width: 576px)" srcset="assets/img/content-images/fab-forever-octocat-mobile.jpg">
+                <source media="(max-width: 768px)" srcset="assets/img/content-images/fab-forever-octocat-mobile.jpg">
+                <img class="printhead rounded margin-top--l" src="assets/img/content-images/fab-forever-octocat.jpg" alt="this should be a printd 3d model">
             </picture>
             <article class="margin-top--l margin-bottom--l">
                 <h3 class="margin-bottom--s"><span>WHAT </span>are 3D Printing models?</h3>
@@ -88,10 +88,10 @@
                 </p>
             </article>
             <picture class="flex flex-center">
-                <source media="(max-width: 375px)" srcset="assets/img/content-images/img/fab-forever-3d-desk-mobile.jpg">
-                <source media="(max-width: 576px)" srcset="assets/img/content-images/img/fab-forever-3d-desk-mobile.jpg">
-                <source media="(max-width: 768px)" srcset="assets/img/content-images/img/fab-forever-3d-desk-mobile.jpg">
-                <img class="printhead rounded margin-top--l" src="assets/img/content-images/img/fab-forever-3d-desk.jpg" alt="this should be a table">
+                <source media="(max-width: 375px)" srcset="assets/img/content-images/fab-forever-3d-desk-mobile.j
+                <source media="(max-width: 576px)" srcset="assets/img/content-images/fab-forever-3d-desk-mobile.jpg">
+                <source media="(max-width: 768px)" srcset="assets/img/content-images/fab-forever-3d-desk-mobile.jpg">
+                <img class="printhead rounded margin-top--l" src="assets/img/content-images/fab-forever-3d-desk.jpg" alt="this should be a table">
             </picture>
             <article class="margin-top--l margin-bottom--l">
                 <h3 class="margin-bottom--s"><span>WHERE</span> can I get them? - I am no designer</h3>
@@ -114,15 +114,15 @@
                 <div class="social">
                     <a href="https://www.instagram.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to instagram"><img class="social-icon"
-                            src="assets/img/instagram.svg" alt="the instagram logo"></a>
+                            src="assets/img/svg/instagram.svg" alt="the instagram logo"></a>
                     <a href="https://www.facebook.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to facebook"><img class="social-icon"
-                            src="assets/img/square-facebook.svg" alt="the facebook logo"></a>
+                            src="assets/img/svg/square-facebook.svg" alt="the facebook logo"></a>
                     <a href="https://www.twitter.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to twitter"><img class="social-icon"
-                            src="assets/img/square-twitter.svg" alt="the twitter logo"></a>
+                            src="assets/img/svg/square-twitter.svg" alt="the twitter logo"></a>
                     <a href="https://www.slack.com" rel="noopener" target="_blank"
-                        aria-label="this link sends you to slack"><img class="social-icon" src="assets/img/slack.svg"
+                        aria-label="this link sends you to slack"><img class="social-icon" src="assets/img/svg/slack.svg"
                             alt="the slack logo"></a>
                 </div>
             </div>
