Fiy typos in image source

--- a/models.html
+++ b/models.html
@@ -88,7 +88,7 @@
                 </p>
             </article>
             <picture class="flex flex-center">
-                <source media="(max-width: 375px)" srcset="assets/img/content-images/fab-forever-3d-desk-mobile.j
+                <source media="(max-width: 375px)" srcset="assets/img/content-images/fab-forever-3d-desk-mobile.jpg">
                 <source media="(max-width: 576px)" srcset="assets/img/content-images/fab-forever-3d-desk-mobile.jpg">
                 <source media="(max-width: 768px)" srcset="assets/img/content-images/fab-forever-3d-desk-mobile.jpg">
                 <img class="printhead rounded margin-top--l" src="assets/img/content-images/fab-forever-3d-desk.jpg" alt="this should be a table">
