--- a/response.html
+++ b/response.html
@@ -11,7 +11,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <!--<meta http-equiv="refresh" content="5; url=index.html">-->
     <title>FAB FOREVER | Your 3D printing roundup resource!</title>
-    <link rel="icon" type="image/x-icon" href="https://rebellionwebdesign.github.io/assets/img/favicon.svg">
+    <link rel="icon" type="image/x-icon" href="https://rebellionwebdesign.github.io/assets/img/svg/favicon.svg">
     <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 </head>
 
@@ -22,13 +22,13 @@
             <div class="column-2 full-row flex flex-between flex-center--y">
                 <a href="https://rebellionwebdesign.github.io/fab-forever"
                     aria-label="the logo sends you back to the homepage">
-                    <img class="headerbar__logo headerbar__logo--mobile" src="assets/img/fab-forever-logo.svg"
+                    <img class="headerbar__logo headerbar__logo--mobile" src="assets/img/svg/fab-forever-logo.svg"
                         alt="the fab forever logo">
                 </a>
-                <img class="mobile--open" src="assets/img/bars-solid.svg" alt="this should be an open icon">
+                <img class="mobile--open" src="assets/img/svg/bars-solid.svg" alt="this should be an open icon">
             </div>
             <div class="column-2 column-2__nav--mobile closed flex flex-end">
-                <img class="mobile--close" src="assets/img/xmark-solid.svg" alt="this should be a close icon">
+                <img class="mobile--close" src="assets/img/svg/xmark-solid.svg" alt="this should be a close icon">
                 <nav>
                     <ul>
                         <li>
@@ -75,22 +75,22 @@
     <footer class="flex flex-center fix-bottom">
         <div class="container container-mobile flex flex-center">
             <div class="column-2 column-2-mobile hide-mobile">
-                <img class="footer-logo" src="assets/img/fab-forever-logo.svg" alt="the fab forever footer logo">
+                <img class="footer-logo" src="assets/img/svg/fab-forever-logo.svg" alt="the fab forever footer logo">
                 <p>An educational static website project</p>
             </div>
             <div class="column-2 column-2-mobile flex flex-center">
                 <div class="social">
                     <a href="https://www.instagram.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to instagram"><img class="social-icon"
-                            src="assets/img/instagram.svg" alt="the instagram logo"></a>
+                            src="assets/img/svg/instagram.svg" alt="the instagram logo"></a>
                     <a href="https://www.facebook.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to facebook"><img class="social-icon"
-                            src="assets/img/square-facebook.svg" alt="the facebook logo"></a>
+                            src="assets/img/svg/square-facebook.svg" alt="the facebook logo"></a>
                     <a href="https://www.twitter.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to twitter"><img class="social-icon"
-                            src="assets/img/square-twitter.svg" alt="the twitter logo"></a>
+                            src="assets/img/svg/square-twitter.svg" alt="the twitter logo"></a>
                     <a href="https://www.slack.com" rel="noopener" target="_blank"
-                        aria-label="this link sends you to slack"><img class="social-icon" src="assets/img/slack.svg"
+                        aria-label="this link sends you to slack"><img class="social-icon" src="assets/img/svg/slack.svg"
                             alt="the slack logo"></a>
                 </div>
             </div>
