--- a/basics.html
+++ b/basics.html
@@ -101,7 +101,7 @@
                         <source media="(max-width: 375px)" srcset="assets/img/content-images/fab-forever-3d-print-process-mobile.jpg">
                         <source media="(max-width: 576px)" srcset="assets/img/content-images/fab-forever-3d-print-process-mobile.jpg">
                         <source media="(max-width: 768px)" srcset="assets/img/content-images/fab-forever-3d-print-process-mobile.jpg">
-                        <img src="assets/img/content-images/fab-forever-3d-print-process.jpg" alt="this should be a flow diagram">
+                        <img src="assets/img/content-images/fab-forever-3d-print-process.png" alt="this should be a flow diagram">
                     </picture>
             </article>
             <article>
