--- a/help.html
+++ b/help.html
@@ -70,7 +70,7 @@
     <main>
     <section class="section-full flex flex-center section-padding--bottom">
     <div class="container flex flex-column flex-column--mobile">
-        <h2><span>HELP </span>is on the way!</h2>
+        <h2 class="margin-top--l"><span>HELP </span>is on the way!</h2>
             <picture class="flex flex-center">
                 <source media="(max-width: 375px)" srcset="assets/img/content-images/fab-forever-clogged-nozzle-mobile.jpg">
                 <source media="(max-width: 576px)" srcset="assets/img/content-images/fab-forever-clogged-nozzle-mobile.jpg">
@@ -95,7 +95,7 @@
                 <source media="(max-width: 768px)" srcset="assets/img/content-images/fab-forever-my-model-mobile.jpg">
                 <img class="printhead rounded margin-top--l" src="assets/img/content-images/fab-forever-my-model.jpg" alt="this should be a printhead">
             </picture>
-            <article class="margin-top--l margin-bottom--l">
+            <article>
                 <h3 class="margin-bottom--s"><span>MY MODEL</span> disappears in the slicer</h3>
                 <p>This is an easy one. When the 3D model doesnt appear in the slicer, it usually has to do with flipped normals. You can fix that easily by recalculating the normals in your modeling software.</p>
             </article>
