--- a/materials.html
+++ b/materials.html
@@ -69,8 +69,8 @@
     <!--CONTENT SECTION START-->
     <main>
         <section class="section-full flex flex-center section-padding--bottom">
-            <div class="container flex flex-column flex-column--mobile">
-                <h2><span>Follow</span> the white filament</h2>
+            <div class="container flex flex-column">
+                <h2 class="margin-top--l"><span>Follow</span> the white filament</h2>
                 <picture class="flex flex-center">
                     <source media="(max-width: 375px)"
                         srcset="assets/img/content-images/fab-forever-filament-measure-mobile.jpg">
