Add page buttons

--- a/basics.html
+++ b/basics.html
@@ -68,7 +68,7 @@
 
     <!--CONTENT SECTION START-->
 <main>
-    <section class="section-full flex flex-center section-padding--bottom">
+    <section class="section-full flex flex-center flex-column section-padding--bottom">
     <div class="container flex flex-column">
         <h2 class="margin-top--l"><span>LETS </span>start simple</h2>
             <picture class="flex flex-center">
@@ -108,7 +108,16 @@
                 <h3 class="margin-bottom--s"><span>CAN</span> I build my own?</h3>
                 <p>Yes, definetly. Either through a DIY Kit, or by building a reprap printer from scratch. But keep in mind, that building one from scratch can be much more expensive than just buying one. This depends strongly on what you are planning to do with the machine. Below is a table which shows pros and contras of diy Printers versus buying a ready made one.</p>
             </article>
+          <div class="button-wrapper-bottom margin-top--l flex flex-row flex-between">
+        <a class="page-button text-white" href="https://rebellionwebdesign.github.io/fab-forever" aria-label="this links to the basics page" rel="noopener" target="_self">
+        BACK
+    </a>
+        <a class="page-button text-white" href="https://rebellionwebdesign.github.io/fab-forever/materials.html" aria-label="this links to the basics page" rel="noopener" target="_self">
+        NEXT
+    </a>
+</div>  
     </div>
+    
     </section>
 </main>
 
