Add page buttons

--- a/help.html
+++ b/help.html
@@ -89,7 +89,7 @@
                     too wide or narrow lines (messes up the models dimension) or the molten plastic not coming out at all. The best solution here is to pay extreme attention to how you level your bed. Some printers have inbuilt routines to do that and some printers can also do it automatically.
                 </p>
             </article>
-            <picture class="flex flex-center">
+            <picture class="flex flex-center margin-bottom--l">
                 <source media="(max-width: 375px)" srcset="assets/img/content-images/fab-forever-my-model-mobile.jpg">
                 <source media="(max-width: 576px)" srcset="assets/img/content-images/fab-forever-my-model-mobile.jpg">
                 <source media="(max-width: 768px)" srcset="assets/img/content-images/fab-forever-my-model-mobile.jpg">
@@ -99,6 +99,11 @@
                 <h3 class="margin-bottom--s"><span>MY MODEL</span> disappears in the slicer</h3>
                 <p>This is an easy one. When the 3D model doesnt appear in the slicer, it usually has to do with flipped normals. You can fix that easily by recalculating the normals in your modeling software.</p>
             </article>
+            <div class="button-wrapper-bottom margin-top--l flex flex-row flex-center">
+                <a class="page-button text-white" href="https://rebellionwebdesign.github.io/fab-forever" aria-label="this links to the basics page" rel="noopener" target="_self">
+                BACK TO HOMEPAGE - THANKS FOR READING!
+                </a>
+        </div>  
     </div>
     </section>
     </main>
@@ -110,7 +115,7 @@
                 <img class="footer-logo" src="assets/img/svg/fab-forever-logo.svg" alt="the fab forever footer logo">
                 <p>An educational static website project</p>
             </div>
-            <div class="column-2 column-2-mobile flex flex-center">
+            <div class="column-2 column-2-mobile flex flex-end">
                 <div class="social">
                     <a href="https://www.instagram.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to instagram"><img class="social-icon"
