Add page button

--- a/materials.html
+++ b/materials.html
@@ -131,6 +131,14 @@
                         filament vs self made filament.
                     </p>
                 </article>
+                <div class="button-wrapper-bottom margin-top--l flex flex-row flex-between">
+                    <a class="page-button text-white" href="https://rebellionwebdesign.github.io/fab-forever/basics.html" aria-label="this links to the basics page" rel="noopener" target="_self">
+                    BACK
+                </a>
+                    <a class="page-button text-white" href="https://rebellionwebdesign.github.io/fab-forever/models.html" aria-label="this links to the basics page" rel="noopener" target="_self">
+                    NEXT
+                </a>
+            </div>  
             </div>
         </section>
     </main>
@@ -142,7 +150,7 @@
                 <img class="footer-logo" src="assets/img/svg/fab-forever-logo.svg" alt="the fab forever footer logo">
                 <p>An educational static website project</p>
             </div>
-            <div class="column-2 column-2-mobile flex flex-center">
+            <div class="column-2 column-2-mobile flex flex-end">
                 <div class="social">
                     <a href="https://www.instagram.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to instagram"><img class="social-icon"
