--- a/models.html
+++ b/models.html
@@ -68,9 +68,9 @@
 
     <!--CONTENT SECTION START-->
     <main>
-    <section class="section-full flex flex-center section-padding--bottom">
+    <section class="section-full flex flex-center flex-column section-padding--bottom">
     <div class="container container--mobile">
-        <h2><span>You</span> can model too!</h2>
+        <h2 class="margin-top--l"><span>You</span> can model too!</h2>
             <picture class="flex flex-center">
                 <source media="(max-width: 375px)" srcset="assets/img/content-images/fab-forever-octocat-mobile.jpg">
                 <source media="(max-width: 576px)" srcset="assets/img/content-images/fab-forever-octocat-mobile.jpg">
@@ -99,6 +99,14 @@
                     Cults or CGTrader. You can search for what you need there, but be aware that some models need to be paid.
                 </p>
             </article>
+            <div class="button-wrapper-bottom margin-top--l flex flex-row flex-between">
+                <a class="page-button text-white" href="https://rebellionwebdesign.github.io/fab-forever/materials.html" aria-label="this links to the basics page" rel="noopener" target="_self">
+                BACK
+            </a>
+                <a class="page-button text-white" href="https://rebellionwebdesign.github.io/fab-forever/help.html" aria-label="this links to the basics page" rel="noopener" target="_self">
+                NEXT
+            </a>
+        </div>  
     </div>
     </section>
     </main>
@@ -110,7 +118,7 @@
                 <img class="footer-logo" src="assets/img/svg/fab-forever-logo.svg" alt="the fab forever footer logo">
                 <p>An educational static website project</p>
             </div>
-            <div class="column-2 column-2-mobile flex flex-center">
+            <div class="column-2 column-2-mobile flex flex-end">
                 <div class="social">
                     <a href="https://www.instagram.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to instagram"><img class="social-icon"
