Fix cta button behavior

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <p class="margin-top--s">Bring your ideas to life with our comprehensive roundup!</p>
                     <div class="button-wrapper">
                         <a class="button text-white" href="https://rebellionwebdesign.github.io/fab-forever/basics.html"
-                            aria-label="this links to the basics page" rel="noopener" target="_blank">
+                            aria-label="this links to the basics page" rel="noopener" target="_self">
                             GET STARTED!
                         </a>
                     </div>
