Fix bottom dividers too low

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     </div>
                 </div>
             </div>
-            <img class="divider divider-bottom" src="assets/img/svg/shape-divider-bottom.svg"
+            <img class="divider" src="assets/img/svg/shape-divider-bottom.svg"
                 alt="the bottom shape divider">
         </section>
         <!--ABOUT SECTION END-->
@@ -157,7 +157,7 @@
                     </form>
                 </div>
             </div>
-            <img class="flip-x divider divider-bottom" src="assets/img/svg/shape-divider-bottom.svg"
+            <img class="flip-x divider" src="assets/img/svg/shape-divider-bottom.svg"
                 alt="the bottom shape divider">
         </section>
         <!--CONTACT SECTION END-->
